--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -13,7 +13,7 @@ Code goes through several steps to get to production. This document describes th
 - [Overview](#overview)
 - [Process details](#process-details)
 - [Rollbacks](#rollbacks)
-- [Creating a vets-webiste Release](#creating-a-release)
+- [Creating a vets-website Release](#creating-a-vets-website-release)
 - [Hotfixes](#hotfixes)
 - [vets-website Manual deployment](#vets-website-manual-deployment)
   - [Before deploying](#before-deploying)
