--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -17,7 +17,7 @@ Code goes through several steps to get to production. This document describes th
 - [Hotfixes](#hotfixes)
 - [vets-website Manual deployment](#vets-website-manual-deployment)
   - [Before deploying](#before-deploying)
-  - [Full production deploy of vets-webiste](#full-production-deploy-of-vagov)
+  - [Full production deploy of vets-website](#full-production-deploy-of-vets-website)
   - [Manual deployment of vets-webiste to staging.va.gov](#manual-deployment-of-vets-website-to-stagingvagov)
 - [content-build Manual deployment](#manual-deployment)
   - [Content-only production deploy](#content-only-production-deploy)
