--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -74,7 +74,7 @@ previous release tag. Typical deployment times are under 5mins.
 If SLOs are not affected and a fix is not critical, no rollback will be issued. Instead the fix should 
 be applied through the standard development workflow.
 
-## Creating a vets-webiste Release
+## Creating a vets-website Release
 
 If the commit you are trying to release to does not have an official release tag, you have to create one:
 
