--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -19,7 +19,7 @@ Code goes through several steps to get to production. This document describes th
   - [Before deploying](#before-deploying)
   - [Full production deploy of vets-website](#full-production-deploy-of-vets-website)
   - [Manual deployment of vets-webiste to staging.va.gov](#manual-deployment-of-vets-website-to-stagingvagov)
-- [content-build Manual deployment](#manual-deployment)
+- [content-build Manual deployment](#content-build-manual-deployment)
   - [Content-only production deploy](#content-only-production-deploy)
   - [Full production deploy of content-build](#full-production-deploy-of-content-build)
   - [Manual deployment of content-build to staging.va.gov](#manual-deployment-of-content-build-to-stagingvagov)
