--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -18,7 +18,7 @@ Code goes through several steps to get to production. This document describes th
 - [vets-website Manual deployment](#vets-website-manual-deployment)
   - [Before deploying](#before-deploying)
   - [Full production deploy of vets-website](#full-production-deploy-of-vets-website)
-  - [Manual deployment of vets-webiste to staging.va.gov](#manual-deployment-of-vets-website-to-stagingvagov)
+  - [Manual deployment of vets-website to staging.va.gov](#manual-deployment-of-vets-website-to-stagingvagov)
 - [content-build Manual deployment](#content-build-manual-deployment)
   - [Content-only production deploy](#content-only-production-deploy)
   - [Full production deploy of content-build](#full-production-deploy-of-content-build)
