--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -149,7 +149,7 @@ _You may need to contact the developers of those commits to verify._
  
 2. **Verify** changes in **production** once the build finishes
 
-### Manual deployment of vets-webiste to staging.va.gov
+### Manual deployment of vets-website to staging.va.gov
 
 When staging deployments get clogged up or staging as a whole falls behind production 
 (for various reasons) you may need to execute a manual deployment for staging. To do this 
