--- a/packages/documentation/src/pages/getting-started/common-tasks/run-build.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/run-build.mdx
@@ -21,7 +21,7 @@ yarn watch
   - **Webpack** manages this build pipeline. At a high level, this process:
     1. Starts **Webpack**'s devevelopment server which
        - **Builds** the **JavaScript** and **CSS** bundles
-       - **Serves** the **JavaScript** and **CSS** bundles built by Webpack at as well as any scaffolded application pages [http://localhost:3001](http://localhost:3001)
+       - **Serves** the **JavaScript** and **CSS** bundles built by Webpack as well as any scaffolded application pages [http://localhost:3001](http://localhost:3001)
 
 #### content-build
   - **Metalsmith** manages this build pipeline. At a high level, this process:
