--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -71,7 +71,7 @@ These instructions cover building and running VA.gov locally, including configur
    **Front end repos**
    - `vets-website`: Core front end platform and application code
    - `vagov-content`: Markdown content used to generate static pages
-   - `content-build`: Metalsmith templates and content build for static pages
+   - `content-build`: Liquid templates and content build for static pages
    - `veteran-facing-services-tools`: Shared front end components (including non VA.gov users) and front end documentation site
 
    **Back end repos**
