--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -91,8 +91,7 @@ These instructions cover building and running VA.gov locally, including configur
    $ yarn install
    ```
 
-8a. Build `vets-website`. Make sure you [configured the SOCKS proxy](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/platform/engineering/internal-tools.md#configure-the-socks-proxy) to fetch content from Drupal.
-   If you're only doing application work inside `vets-website` you can build with the scaffold option:
+8a. Build `vets-website`. If you're only doing application work inside `vets-website` you can build with the scaffold option:
    ```bash
    $ yarn build:webpack --env.scaffold
    ```
