--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -119,7 +119,7 @@ These instructions cover building and running VA.gov locally, including configur
 ### content-build
 
 In order to run `content-build`, you must first generate the CSS and JS files within `vets-website` 
-(follow steps above). If you don't you will see a build error in the console instructing you to first
+(follow steps above). If you don't, you will see a build error in the console instructing you to first
 generate files in `vets-website`.
 
 If you don't need to locally view static pages and are just working on applications, you don't need to set this part up.
