--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -114,7 +114,7 @@ These instructions cover building and running VA.gov locally, including configur
 
    The watch is complete when the CLI says `Compiled successfully`.
 
-10a. Open [http://localhost:3001](http://localhost:3001) in a browser
+10a. Open [http://localhost:3001](http://localhost:3001) in a browser if you built `vets-website` using the scaffold option; otherwise, continue on to the [content-build](#content-build) section for viewing changes in the browser.
 
 ### content-build
 
