--- a/packages/documentation/src/pages/getting-started/workflow/review.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/review.mdx
@@ -7,11 +7,12 @@ tags: peer review, pull request, feature branch, git
 
 ## Submit pull request
 
-- **Pull master** and **push feature branch** to `vets-website` repository
+- **Pull master** and **push feature branch** to `vets-website` and/or `content-build` repositories
 ```bash
 git pull origin master
 git push origin feature/12345-issue-title
 ```
+**Note:** If you are making changes in both repositories that are dependent on each other, you should give both branches in each repository the same name.
 
 _Always **pull master** into your feature branch before creating a pull request._
 
@@ -62,6 +63,8 @@ _**The person making the change is responsible** for ensuring the change is adeq
 
 After a pull request is created, **Jenkins** will automatically **rebuild** these instances when feature branch **changes are pushed**
 
+To review dependent changes made in `vets-website` and `content-build` pull requests in the same review instance, verify both branches in each repository have the same name. The review instance deployment in both pull requests will share the same link. Changes made in either pull request will be deployed to that review instance.
+
   _You will need your browser configured to access the vetsgov-internal domain via the SOCKS proxy. Please see the [2. Access internal tools](/getting-started/internal-tools) for detailed instructions._
 
   ### Review instance manual creation
@@ -70,7 +73,7 @@ After a pull request is created, **Jenkins** will automatically **rebuild** thes
 
 1. Visit the [Jenkins Review Application Deploy job UI](http://jenkins.vfs.va.gov/job/deploys/job/vets-review-instance-deploy/) and log in.
 1. Select **Build with Parameters**
-1. Specify the branch names for `api_branch` and `web_branch`. These branches will be deployed together with the review instance.
+1. Specify the branch names for `api_branch`, `web_branch`, and `content_branch`. These branches will be deployed together with the review instance.
 1. When the process is completed, the URL for the review instance will be provided at the end of the output logs.
 
 _A Jenkins job will run periodically and remove review instances for which the source branches no longer exist. To ensure that your instance is cleaned up appropriately, just delete the branch from the origin repository._
