Add note about scaffold registry

--- a/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
@@ -60,7 +60,8 @@ Here are the steps for manually setting up a new application. We're going to wal
   }
 }
 ```
-   
+
+**Note:** If you don't want to add your application to the application registry, but still want your application's tests to run in CI, you'll need to add an entry to `src/applications/registry.scaffold.json` instead.
 
 4. Create the file you referenced in the `entryFile` property above:
 
