[content-build/release] Updated deployment docs in prep for content-build release (#614)
Updated docs for content separation

--- a/packages/documentation/src/pages/getting-started/workflow/write.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/write.mdx
@@ -20,7 +20,7 @@ git checkout master && git pull origin master
 
 - Create a new feature branch from master
 ```bash
-git checkout -b 12345-issue-title
+git checkout -b feature/12345-issue-title
 ```
 
 _Since most new work derives from a GitHub Issue, it's recommended to prefix your branch name with the issue. For example, if you're working on a feature to collect a veteran's address as detailed in Issue #25, you might call your issue `25-address`._
