--- a/packages/documentation/src/pages/getting-started/common-tasks/run-build.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/run-build.mdx
@@ -16,19 +16,25 @@ Start the watch task:
 yarn watch
 ```
 ### Build
+
+#### vets-website
+  - **Webpack** manages this build pipeline. At a high level, this process:
+    1. Starts **Webpack**'s devevelopment server which
+       - **Builds** the **JavaScript** and **CSS** bundles
+       - **Serves** the **JavaScript** and **CSS** bundles built by Webpack as well as any scaffolded application pages [http://localhost:3001](http://localhost:3001)
+
+#### content-build
   - **Metalsmith** manages this build pipeline. At a high level, this process:
-    1. retrieves and **builds** all of the **static pages** sourced from `vagov-content` or Drupal
-    2. starts **Webpack**'s devevelopment server which
-       - **builds** the **JavaScript** and **CSS** bundles, and
-       - **serves** the **JavaScript** and **CSS** bundles and the **static content** built by Metalsmith at [http://localhost:3000](http://localhost:3000)
+    1. Retrieves and **builds** all of the **static pages** sourced from `vagov-content` or Drupal
+    2. **Serves** the **static content** built by Metalsmith at [http://localhost:3002](http://localhost:3002)
 
 ### Output
-  - **Metalsmith** outputs **static pages** to`build/localhost`
-  - **Webpack** development server has **no output**. **JavaScript** and **CSS** are kept in memory.
+  - **Metalsmith** in the `content-build` repository outputs **static pages** to`build/localhost`
+  - **Webpack** in the `vets-website` repository development server has **no output**. **JavaScript** and **CSS** are kept on disk.
 
 ### Watch and rebuild
-  - **Metalsmith** will rebuild **static pages** when changes are saved to **templates** or content in `vagov-content`
-  - **Webpack** development server will rebuild when changes are saved to **JavaScript** or **SCSS**
+  - **Metalsmith** in the `content-build` repository will rebuild **static pages** when changes are saved to **templates** or content in `vagov-content`
+  - **Webpack** in the `vets-website` repository will rebuild when changes are saved to **JavaScript** or **SCSS**
   - Both updates require a browser refresh to see changes.
   - Changes to build process or configuration files are typically not picked up, and require a restart of the watch task to become active.
 
@@ -57,5 +63,5 @@ _Typically, the reason for building the site locally like this is to build it in
 _**Deep-linking** to urls that are rendered by **React** apps on VA.gov **will not work** when you run the site this way, as that relies on some server-side routing that is handled in nginx (or the Webpack dev server when running the `watch` task)_
 
 ## Related source
-- [Metalsmith build script](https://github.com/department-of-veterans-affairs/devops)
+- [Metalsmith build script](https://github.com/department-of-veterans-affairs/content-build/tree/master/src/site/stages/build)
 - [Webpack development server config](https://github.com/department-of-veterans-affairs/vets-website/blob/master/config/webpack.dev.config.js)
