--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -11,15 +11,18 @@ Code goes through several steps to get to production. This document describes th
 
 - [Automated deployment schedule](#automated-deployment-schedule)
 - [Overview](#overview)
-- [Automated process details](#process-details)
+- [Automated process details](#automated-process-details)
 - [Rollbacks](#rollbacks)
-- [Creating a Release](#creating-a-release)
+- [Creating a vets-website Release](#creating-a-vets-website-release)
 - [Hotfixes](#hotfixes)
-- [Manual deployment](#manual-deployment)
+- [vets-website Manual deployment](#vets-website-manual-deployment)
   - [Before deploying](#before-deploying)
+  - [Full production deploy of vets-website](#full-production-deploy-of-vets-website)
+  - [Manual deployment of vets-website to staging.va.gov](#manual-deployment-of-vets-website-to-stagingvagov)
+- [content-build Manual deployment](#content-build-manual-deployment)
   - [Content-only production deploy](#content-only-production-deploy)
-  - [Full production deploy of va.gov](#full-production-deploy-of-vagov)
-  - [Manual deployment of staging.va.gov](#manual-deployment-of-stagingvagov)
+  - [Full production deploy of content-build](#full-production-deploy-of-content-build)
+  - [Manual deployment of content-build to staging.va.gov](#manual-deployment-of-content-build-to-stagingvagov)
 - [Dealing with Flaky Unit Tests](#dealing-with-flaky-unit-tests)
 
 ## Automated deployment schedule
@@ -27,8 +30,9 @@ Code goes through several steps to get to production. This document describes th
 | Application | Branch | Changes in by | Deployment Start | Release Information |
 | --- | --- | --- | --- | --- |
 | vets-website | master | 2:00pm ET M-F | 3:00pm ET M-F| [vets-website release history](https://github.com/department-of-veterans-affairs/vets-website/releases) |
+| content-build | master | 2:00pm ET M-F | 3:00pm ET M-F| [content-build release history](https://github.com/department-of-veterans-affairs/content-build/releases) |
 | vets-api | master | 2:00pm ET M-F | 3:00pm ET M-F | [vets-api release history](https://github.com/department-of-veterans-affairs/vets-api/releases) |
-| vets-webiste (content only) | master | 9am-12pm Hourly, 1:45pm, 4pm, 5pm ET M-F | (same) | [vets-website latest release](https://github.com/department-of-veterans-affairs/vets-website/releases/latest) |
+| content-build (content only) | master | 9am-12pm Hourly, 1:45pm, 4pm, 5pm ET M-F | (same) | [content-build latest release](https://github.com/department-of-veterans-affairs/content-build/releases/latest) |
 
 ## Overview
 
@@ -43,9 +47,9 @@ _A big assumption in this process is that the `master` should always be deployab
 
 ## Automated process details
 
-- Every work day at the configured time the [vets-gov-autodeploy-vets-website](http://jenkins.vfs.va.gov/job/deploys/job/vets-gov-autodeploy-vets-website/) job will run.
-- The autodeploy job will call the [vets-website release](http://jenkins.vfs.va.gov/job/releases/job/vets-website/) job which creates a [release](https://github.com/department-of-veterans-affairs/vets-website/releases).
-- Release artifact is deployed to production by [vets-website-vagovprod job](http://jenkins.vfs.va.gov/job/deploys/job/vets-website-vagovprod/). This job should *not* be triggered manually.
+- Every work day at the configured time the [vets-gov-autodeploy-vets-website](http://jenkins.vfs.va.gov/job/deploys/job/vets-gov-autodeploy-vets-website/) and [vets-gov-autodeploy-content-build](http://jenkins.vfs.va.gov/job/deploys/job/vets-gov-autodeploy-content-build/) jobs will run.
+- The autodeploy jobs will call the [vets-website release](http://jenkins.vfs.va.gov/job/releases/job/vets-website/) and [content-build release](http://jenkins.vfs.va.gov/job/releases/job/content-build/) jobs which create a [vets-website release](https://github.com/department-of-veterans-affairs/vets-website/releases) and [content-build release](https://github.com/department-of-veterans-affairs/content-build/releases).
+- Release artifacts are deployed to production by the [vets-website-vagovprod](http://jenkins.vfs.va.gov/job/deploys/job/vets-website-vagovprod/) and [content-build-vagovprod](http://jenkins.vfs.va.gov/job/deploys/job/content-build-vagovprod/) jobs. These jobs should *not* be triggered manually.
 
 ## Rollbacks
 
@@ -54,17 +58,17 @@ established for the project, you may restore service to users by rolling back
 to a previous deployment. This is accomplished by triggering a new deploy job in Jenkins using a 
 previous release tag. Typical deployment times are under 5mins.
 
-1. Identify the release you want to rollback to by visiting the [vets-website release log](https://github.com/department-of-veterans-affairs/vets-website/releases)
+1. Identify the release you want to rollback to by visiting the [vets-website](https://github.com/department-of-veterans-affairs/vets-website/releases) or [content-build](https://github.com/department-of-veterans-affairs/content-build/releases) release log(s)
 2. Click on the commit ID in the left column of the release you want to reference
 3. Copy the commit ref (it will be a long string like: `7c74702605561a33a5a6edbe46a95ac43dddb1df`)
-4. Visit the [vets-website prod deploy job](http://jenkins.vfs.va.gov/job/deploys/job/vets-website-vagovprod/build?delay=0sec)
+4. Visit the [vets-website](http://jenkins.vfs.va.gov/job/deploys/job/vets-website-vagovprod/build?delay=0sec) or [content-build](http://jenkins.vfs.va.gov/job/deploys/job/content-build-vagovprod/build?delay=0sec) prod deploy job(s)
 5. Enter the ref value into the ref field
 6. Click "Build"
 
 If SLOs are not affected and a fix is not critical, no rollback will be issued. Instead the fix should 
 be applied through the standard development workflow.
 
-## Creating a Release
+## Creating a vets-website Release
 
 If the commit you are trying to release to does not have an official release tag, you have to create one:
 
@@ -79,7 +83,23 @@ If the commit you are trying to release to does not have an official release tag
 
 This should create a new release, and deploy it to va.gov.
 
-**Note:** Verify that there are no [scheduled](#automated-deployment-schedule) [content releases](http://jenkins.vfs.va.gov/job/deploys/job/vets-website-content-autodeploy/) around the time of creating a release. A following release can override your manual release if started before your release has finished.
+## Creating a content-build Release
+
+If the commit you are trying to release to does not have an official release tag, you have to create one:
+
+1. Update your local master branch
+2. Check out the commit you want
+3. Note the latest release from the [content-build release log](https://github.com/department-of-veterans-affairs/content-build/releases)
+4. Visit the [release job in Jenkins](http://jenkins.vfs.va.gov/job/releases/job/content-build/)
+5. Make sure the commit you want to use has [passed through the build pipeline in master](https://github.com/department-of-veterans-affairs/content-build/commits/master)
+6. Replace the "ref" value with the commit you want to use to create the release (it will be a long string like: `7c74702605561a33a5a6edbe46a95ac43dddb1df`)
+7. Click "Build"
+8. You should now see it in the [content-build release log](https://github.com/department-of-veterans-affairs/content-build/releases) and can follow the normal rollback steps.
+
+This should create a new release, and deploy it to va.gov.
+
+**Note:** Verify that there are no [scheduled](#automated-deployment-schedule) [content releases](http://jenkins.vfs.va.gov/job/deploys/job/content-build-content-autodeploy/) around the time of creating a release. A following release can override your manual release if started before your release has finished.
+
 
 ## Hotfixes
 
@@ -89,17 +109,9 @@ To create a hotfix, create a branch from the last stable release tag, make chang
 create a new release tag following the correct naming scheme, and trigger a deploy in Jenkins with the 
 release name as a parameter. This documentation is above, in the "Creating a Release" section.
 
-## Manual deployment
+## vets-website Manual deployment
 
 Out-of-band deploys may be performed in accordance with Platform [deployment policy](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/platform/working-with-vsp/policies-work-norms/deployment-policy.md#requesting-out-of-band-deploys).
-
-Two out-of-cycle deploys are supported in Jenkins:
-- partial deploy including only static page changes (`vagov-content` and `Drupal`)
-- full deploy of VA.gov client app and static pages
-
-**Note**: If a full or partial manual deploy of vets-website is kicked off while a scheduled deploy 
-is in progress (or vice versa), the builds will not conflict. Whichever begins first will deploy 
-first, with the latter queued up behind it.
 
 ### Before deploying
 
@@ -107,21 +119,7 @@ first, with the latter queued up behind it.
 - Builds status can be viewed [here](http://jenkins.vetsgov-internal/blue/organizations/jenkins/testing%2Fvets-website/activity?branch=master). _Requires SOCKS proxy. See [Accessing internal tools](/getting-started/internal-tools)_
 - If this build fails, you may need to log into Jenkins and restart it
 
-### Content-only production deploy
-
-1. Start a deploy job
-   - Log into Jenkins [here](http://jenkins.vetsgov-internal/job/deploys/job/vets-gov-autodeploy-vets-website/)
-   - Click **Build with Parameters**
-   - Set the **release_wait** option to **5** minutes
-   - Check **use_latest_release** <-- _important_
-   - Click **Build**
-   - Verify commits in **deployment notification**
-
- _In the [#vfs-platform-builds](https://dsva.slack.com/archives/C0MQ281DJ) Slack channel, Jenkins will include a link that shows the exact commits being released in the **deploy notification**._
-
-2. **Verify** changes in **production** once the build finishes
-
-### Full production deploy of VA.gov
+### Full production deploy of vets-website
 
 1. Verify that your changes are committed and that the changes since the last deploy are safe to deploy:
    - **Last deployment time**: You can check the build [history](http://jenkins.vetsgov-internal/job/deploys/job/vets-gov-autodeploy-vets-website/) for the time of the last deploy (usually daily at 2pm EST)
@@ -141,7 +139,7 @@ _You may need to contact the developers of those commits to verify._
  
 2. **Verify** changes in **production** once the build finishes
 
-### Manual deployment of staging.va.gov
+### Manual deployment of vets-website to staging.va.gov
 
 When staging deployments get clogged up or staging as a whole falls behind production 
 (for various reasons) you may need to execute a manual deployment for staging. To do this 
@@ -153,7 +151,57 @@ use the following steps:
 4. Replace the "ref" value with the commit you want to use to create the release (it will be a long string like: `7c74702605561a33a5a6edbe46a95ac43dddb1df`)
 5. Click **Build**
 6. You can watch the deployment process from the [vets-website vagovstaging](http://jenkins.vfs.va.gov/job/deploys/job/vets-website-vagovstaging/) status page in Jenkins 
-6. [Confirm that your deployed commit is on staging](https://frontend-support-dashboard.now.sh/)
+7. [Confirm that your deployed commit is on staging](https://frontend-support-dashboard.now.sh/)
+
+## content-build Manual deployment
+
+Out-of-band deploys may be performed in accordance with Platform [deployment policy](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/platform/working-with-vsp/policies-work-norms/deployment-policy.md#requesting-out-of-band-deploys).
+
+Multiple manual deploys are supported in Jenkins:
+
+- Partial deploy including only static page changes (`vagov-content` and `Drupal`)
+- Full deploy of VA.gov static pages
+
+### Content-only production deploy
+
+1. Start a deploy job
+   - [Login to Jenkins](http://jenkins.vetsgov-internal/job/deploys/job/vets-gov-autodeploy-content-build/)
+   - Click **Build with Parameters**
+   - Set the **release_wait** option to **5** minutes
+   - Check **use_latest_release** <-- _important_
+   - Click **Build**
+   - Verify commits in **deployment notification**
+
+ _In the [#vfs-platform-builds](https://dsva.slack.com/archives/C0MQ281DJ) Slack channel, Jenkins will include a link that shows the exact commits being released in the **deploy notification**._
+
+### Full production deploy of content-build
+
+1. Verify that your changes are committed and that the changes since the last deploy are safe to deploy:
+   - **Last deployment time**: You can check the build [history](http://jenkins.vetsgov-internal/job/deploys/job/vets-gov-autodeploy-content-build/) for the time of the last deploy (usually daily at 2pm EST)
+   - **Commit history**: [Look](https://github.com/department-of-veterans-affairs/content-build/commits/master) for commits after the last deploy and verify they're production ready.
+
+_You may need to contact the developers of those commits to verify._
+
+2. Start a deploy job
+   - [Login to Jenkins](http://jenkins.vetsgov-internal/job/deploys/job/vets-gov-autodeploy-content-build/)
+   - Click **Build with Parameters** _(contact [#vsp-operations](https://dsva.slack.com/archives/CJYRZK2HH) if you don't see this option and think you should)_
+   - Set the **release_wait** option to **5** minutes
+   - Uncheck **use_latest_release** <-- _important_
+   - Click **Build**
+   - Verify commits in **deployment notification**
+
+### Manual deployment of content-build to staging.va.gov
+
+When staging deployments get clogged up or staging as a whole falls behind production 
+(for various reasons) you may need to execute a manual deployment for staging. To do this 
+use the following steps: 
+
+1. Visit the [content-build staging](http://jenkins.vfs.va.gov/job/deploys/job/content-build-staging/) job in Jenkins
+2. Click **Build with Parameters**
+3. Make sure the commit you want to use has [passed through the build pipeline in master](https://github.com/department-of-veterans-affairs/content-build/commits/master)
+4. Replace the "ref" value with the commit you want to use to create the release (it will be a long string like: `7c74702605561a33a5a6edbe46a95ac43dddb1df`)
+5. Click **Build**
+6. You can watch the deployment process from the [content-build vagovstaging](http://jenkins.vfs.va.gov/job/deploys/job/content-build-staging/) status page in Jenkins 
 
 ## Dealing with Flaky Unit Tests
 
