--- a/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
@@ -2,12 +2,14 @@
 title: Writing a unit test
 tags: Mocha, Chai, Enzyme, schemaform-utils
 ---
+
 # Writing a unit test
 All new code that is added to `vets-website` should be unit tested and unit tests should cover at least 75% of code paths. Write unit tests as you build to make sure your form (or other component) is behaving as you expect and to help guard against future bugs.
 For example, you might create a unit test file for each page in a form and then test the following scenarios:
 - The correct number of inputs show up when you render the page.
 - The correct number of fields display validation errors if you submit without entering any information.
 - Any conditional logic on the page displays under the correct conditions.
+
 ## Unit test overview
 - The `vets-website` repo uses:
   - [Mocha](https://mochajs.org/) for running unit tests
@@ -16,6 +18,7 @@ For example, you might create a unit test file for each page in a form and then 
     - We encourage the use of React Testing Library in place of Enzyme. [See the migration docs.] (https://testing-library.com/docs/react-testing-library/migrate-from-enzyme)
   - [Sinon](https://sinonjs.org/) for stubs and spies
 - Unit tests are **collocated with the application folder** in a test directory that matches the application directory structure:
+
 ```
 - 📂 src
   - 📂 my-application
@@ -25,11 +28,13 @@ For example, you might create a unit test file for each page in a form and then 
       - 📂 components
         - MyComponent.unit.spec.jsx
 ```
+
 Mocha runs any *file_name*.unit.spec.js file located in the `/src` folder. This file is usually located in a test directory close to the code being tested.
 [Run the test](/getting-started/common-tasks/test) locally through npm script commands, during the Jenkins build (Unit), and after merging to master.
    
 ## Unit test conventions
 Use the following conventions when writing a unit test.
+
 ```js
 import React from 'react';
 import { expect } from 'chai';
@@ -44,7 +49,8 @@ describe('my-application', () => {
   });
 });
 ```
-- Use `describe` to organize tests by application and feature. Two levels is adequate depending on the size of the application being tested. Try to avoid nesting deeper than two levels.
+
+- Use `describe` to organize tests by application and feature. Two levels should be adequate depending on the size of the application being tested. Try to avoid nesting deeper than two levels.
 - Use `it` to describe the unit test:
   - Use active voice.
   - Describe the behavior in terms specific to the unit.
@@ -61,10 +67,12 @@ describe('my-application', () => {
   
 ## Unit tests for forms pages
 Use the following guidelines when writing a unit test for forms pages.
+
 ```js
 import { expect } from 'chai';
 import { render, screen } from '@testing-library/react';
 import { DefinitionTester } from 'platform/testing/unit/schemaform-utils';
+
 describe('MyForm FormID', () => {
   const {
     schema,
@@ -87,14 +95,17 @@ describe('MyForm FormID', () => {
     expect(screen.queryAllByRole('textbox')).to.equal(4); // facility name, from/to years, city
   });
 ```
+
 - Organize forms config tests by page.
 - Use `<DefinitionTester />` to render form configs for testing.
 - Test at least the following:
   - Number of each type of input is rendered (example above)
   - Any conditional display logic on the page
   - All field level validation errors
-- If you're using Enzyme, you can use the other `schemaform-utils` for filling out form data:
->- `fillData()` - Enzyme helper that fires a change event with a value for an element at the given selector
+
+When working with Enzyme, you can use the other `schemaform-utils` for filling out form data:
+- `fillData()` - Enzyme helper that fires a change event with a value for an element at the given selector
+
 ```
 fillData(
   form, // mounted <DefinitionTester />
@@ -102,7 +113,9 @@ fillData(
   'USA', // value
 );
 ```
->- `fillDate()` - Enzyme helper that fills in a date field with data from the given date string
+
+- `fillDate()` - Enzyme helper that fills in a date field with data from the given date string
+
 ```
 fillDate(
   form, // mounted <DefinitionTester />
@@ -110,9 +123,12 @@ fillDate(
   '1950-1-3', // value
 );
 ```
->- `selectCheckbox()` - Enzyme helper that fires a change event with a value for a checkbox at the given name
+
+- `selectCheckbox()` - Enzyme helper that fires a change event with a value for a checkbox at the given name
+
 ## Example unit tests - React Testing Library
 We recommend using [React Testing Library](https://testing-library.com/docs/react-testing-library/intro) for all your unit/integration testing needs.
+
 ```js
 // SimpleLoginForm.js
 import React from 'react';
@@ -133,6 +149,7 @@ const SimpleLoginForm = ({ onSubmit }) => {
       onSubmit({ username, password });
     }
   }
+
   return (
     <div>
       <form onSubmit={handleSubmit}>
@@ -152,6 +169,7 @@ const SimpleLoginForm = ({ onSubmit }) => {
 };
 export default SimpleLoginForm;
 ```
+
 ```js
 // SimpleLoginForm.unit.spec.jsx
 import React from 'react';
@@ -166,16 +184,20 @@ describe('my-application', () => {
         const handleSubmit = sinon.spy();
         const { getByLabelText, getByText } = render(<SimpleLoginForm onSubmit={handleSubmit} />);
         const user = { username: 'user123', password: 'password123' };
+
         userEvent.type(getByLabelText(/username/i), user.username);
         userEvent.type(getByLabelText(/password/i), user.password);
         userEvent.click(getByText(/submit/i));
+
         expect(handleSubmit.callCount).to.equal(1); // alternatively `expect(handleSubmit.calledOnce).to.be.true()` works as well
         expect(handleSubmit.calledWith(user)).to.be.true(); // for more explicit testing we can use `calledWithExactly` in place of `calledWith`
     });
   });
 });
 ```
-We have successfully performed a "Happy Path" test for this component. Let's breakdown this test:
+
+We have successfully performed a "Happy Path" test for this component. Let's break down this test:
+
 ```js
 // Setup
 ...
@@ -184,8 +206,11 @@ const { getByLabelText, getByText } = render(<SimpleLoginForm onSubmit={handleSu
 const user = { username: 'user123', password: 'password123' };
 ...
 ```
-The setup for this test is self-explanatory. We create a mocked submit function and pass that to our form component, and use the [render](https://testing-library.com/docs/react-testing-library/api/#render) function to produce actual DOM nodes. Then we define user data for reuse later on.
+
+The setup for this test is self-explanatory. We create a mocked submit function and pass that to our form component, then use the [render](https://testing-library.com/docs/react-testing-library/api/#render) function to produce actual DOM nodes. Then we define user data for reuse later on.
+
 **Note:** In this example we opt-in to destructuring the return value from our `render` function to give us our query functions. Optionally, you can utilize [screen](https://testing-library.com/docs/queries/about#screen) to access the query functions.
+
 ```js
 // DOM Interaction and Queries
 ...
@@ -194,7 +219,11 @@ userEvent.type(getByLabelText(/password/i), user.password);
 userEvent.click(getByText(/submit/i));
 ...
 ```
-Unit tests should be isolated, and your components should use a unique label and text for each element. With that in mind, we can use the query functions that we destructured from `render` to find the input elements in our component by their label text. `Testing Library` provides a utility called [userEvent](https://testing-library.com/docs/ecosystem-user-event/) that allows us to interact with the DOM nodes. We leverage the `type` interaction to enter our username and password into each respective field, then the `click` function to submit after querying with the submit button text.
+
+Unit tests should be isolated and your components should use a unique label and text for each test.
+
+We can use the query functions that we destructured from `render` to find the input elements in our component by their label text. `Testing Library` provides a utility called [userEvent](https://testing-library.com/docs/ecosystem-user-event/) that allows us to interact with the DOM nodes. We leverage the `type` interaction to enter our username and password into each respective field, then the `click` function to submit after querying with the submit button text.
+
 ```js
 // Expect
 ...
@@ -202,9 +231,11 @@ expect(handleSubmit.callCount).to.equal(1); // alternatively `expect(handleSubmi
 expect(handleSubmit.calledWith(user)).to.be.true(); // for more explicit testing we can use `calledWithExactly` in place of `calledWith`
 ...
 ```
+
 To conclude this test we need to check for two things:
 - that our submit button was clicked and our onSubmit function fired
 - that our onSubmit function fired with the correct data
+
 ## Example unit tests - Enzyme
 VSP provides helper utilities to make writing tests easier. The following example unit tests illustrate some of these helpers. You can find these unit tests in the `vets-website` repo in the [veteranInformation.unit.spec.jsx](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/vic-v2/tests/config/veteranInformation.unit.spec.jsx) file.
 ```js
@@ -303,7 +334,7 @@ Unit tests use the following libraries:
 - [chai.js](https://www.chaijs.com/): BDD / TDD assertion library.
 - [chai-as-promised](https://github.com/domenic/chai-as-promised): Extends Chai with assertions about promises.
 - [sinon.js](https://sinonjs.org/): Standalone test spies, stubs and mocks.
-- [React Testing Library](https://testing-library.com/docs/react-testing-library/intro): React Testing Library is a branch of `Testing Library` that allows users to test their components through actual DOM nodes instead of rendered instances.
+- [React Testing Library](https://testing-library.com/docs/react-testing-library/intro): React Testing Library is a branch of `Testing Library` that allows users to test their React components through actual DOM nodes instead of rendered instances.
 - [enzyme](https://airbnb.io/enzyme/): Enzyme is a JavaScript Testing utility for React that makes it easier to test your React Components' output. You can also manipulate, traverse, and in some ways simulate runtime given the output.
 - [enzyme-adapter-react-16](https://www.npmjs.com/package/enzyme-adapter-react-16): Enzyme React 16 integration.
 - [react-dom](https://www.npmjs.com/package/react-dom): React DOM Library needed for testing React Components.
