--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -91,7 +91,7 @@ These instructions cover building and running VA.gov locally, including configur
    $ yarn install
    ```
 
-8a. Build `vets-website`. If you're only doing application work inside `vets-website` you can build which contains the scaffolding option by default:
+8a. Build `vets-website`. If you're only doing application work inside `vets-website` you can run the build command which contains the scaffolding option by default:
    ```bash
    $ yarn build
    ```
