updated default build command for vets-website (#622)
* updated default build command for vets-website

Co-authored-by: oseasmoran73 <oseasmoran73@users.noreply.github.com>

--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -91,9 +91,9 @@ These instructions cover building and running VA.gov locally, including configur
    $ yarn install
    ```
 
-8a. Build `vets-website`. If you're only doing application work inside `vets-website` you can build with the scaffold option:
+8a. Build `vets-website`. If you're only doing application work inside `vets-website` you can run the build command which contains the scaffolding option by default:
    ```bash
-   $ yarn build:webpack --env.scaffold
+   $ yarn build
    ```
 
    If you need the CSS and JS generated for work in `content-build` you can run a normal build:
